<resources>

    <string name="app_name" translatable="false">Calendar Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="no_tasks_yet">No tasks yet</string>
    <string name="calendar">Calendar</string>
    <string name="add_task">Create task</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="edit_task">Edit task</string>
    <string name="profile">Profile</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">Start</string>
    <string name="calendar_planner">Calendar Planner</string>
    <string name="track_tasks_add_new_ones_specify_the_exact_time_and_do_more_with_calendar_planner">Track tasks, add new ones, specify the exact time and do more with Calendar Planner</string>
</resources>