<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.OnboardingActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_onboarding"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/animation_calendar"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/app_name"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/track_tasks_add_new_ones_specify_the_exact_time_and_do_more_with_calendar_planner"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>
        
        <TextView
            android:id="@+id/btn_start_onboarding"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:background="@drawable/save_item_bg"
            android:text="@string/start"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="100dp"/>

    </LinearLayout>
</FrameLayout>